argoproj/hermes-agent-cloudflared/networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: hermes-agent-cloudflared-network-policy
  namespace: hermes-agent-cloudflared
spec:
  tier: default
  selector: app == 'cloudflared'
  types:
    - Ingress
    - Egress
  egress:
    - action: Allow
      protocol: UDP
      source: {}
      destination:
        selector: k8s-app == 'kube-dns'
        namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
        ports:
          - 53
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: k8s-app == 'kube-dns'
        namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
        ports:
          - 53
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: app == 'hermes-agent'
        namespaceSelector: kubernetes.io/metadata.name == 'hermes-agent'
        ports:
          - 9119
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        ports:
          - 443
          - 7844
